Rapid Prd/src/objects/Marble__c.object
<CustomObject>
    <fields>
        <fullName>FundKite__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;MA&apos;
      , State_of_Operation__c = &apos;HI&apos;
      , State_of_Operation__c = &apos;CA&apos;
      , FICO_Score__c &lt; 520
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 20000
      , Ave_Number_of_Deposits_per_Month__c &lt; 6
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Industry__r.FundKite__c = TRUE
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;) 
      , Average_Balancce__c &lt; 400
      
      , AND( 
        ispickval(Entity_Type__c,&apos;Sole Prop&apos;)
      , ispickval(Home_Based__c,&apos;Yes&apos;)
        )

        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 250000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &gt; 250000
        )
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , QC_Monthly_Sales__c &lt; 125000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
      ,
        AND(
              Industry__r.Name = &apos;Auto Sales - New&apos; 
            , QC_Monthly_Sales__c &lt; 165000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
      ,
        AND(
              Industry__r.Name = &apos;Auto Sales - Used&apos; 
            , QC_Monthly_Sales__c &lt; 125000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 7 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 3 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 250000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;||PAUSED|| - FUNDKITE APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FundKite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;CA&apos; 
      , FICO_Score__c &lt; 550
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 10000
      , Ave_Number_of_Deposits_per_Month__c &lt; 5
      , Average_Monthly_Negative_Balance__c &gt; 3
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Industry__r.Fund_Amental__c = TRUE
      , Average_Balancce__c &lt; 750
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*6))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 6 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 6 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 200000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;||PAUSED|| - FUND-AMENTAL APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund-Amental</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fundation__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;NV&apos;
      , State_of_Operation__c = &apos;ND&apos;
      , State_of_Operation__c = &apos;SD&apos;
      , FICO_Score__c &lt; 660
      , Credit_Inquiries_Last_90_Days__c &gt; 7
      , QC_Monthly_Sales__c &lt; 16667
      , Ave_Number_of_Deposits_per_Month__c &lt; 6
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*24))
      , Industry__r.Fundation__c  = TRUE
      , Average_Balancce__c &lt; 1000
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 10000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &gt; 500000
        )
/* uncomment if necessary
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , QC_Monthly_Sales__c &lt; 125000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
      ,
        AND(
              Industry__r.Name = &apos;Auto Sales - New&apos; 
            , QC_Monthly_Sales__c &lt; 165000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
      ,
        AND(
              Industry__r.Name = &apos;Auto Sales - Used&apos; 
            , QC_Monthly_Sales__c &lt; 125000
            , Business_Open_Date__c &gt; (Today() - (30*60))
        )
*/
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 100000 /*Max Payoff Amount*/
              )
          )
)
, &quot;&quot;
, &quot;FUNDATION APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fundation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Timestamp__c</fullName>
        <label>Funded Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Circle_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Circle Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Circle__c</fullName>
        <formula>IF(
   OR( 
        State_of_Operation__c = &apos;NV&apos;
      , FICO_Score__c &lt; 660
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 10000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
      , Business_Open_Date__c &gt; (Today() - (30*24))
      , Bankruptcy_Discharge_Date__c &gt; (today()-(30*84))
        /* uncomment if necessary
      , Funding_Circle_Industry__c = TRUE
        */
      , Average_Balancce__c &lt; 0
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , ispickval(Entity_Type__c,&apos;Sole Prop&apos;)
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 5000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            AND(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &lt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &lt; 0 /*Max Payoff Amount*/
               , (Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &gt; 0.0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;||PAUSED|| - FUNDING CIRCLE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Circle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenwich_Capital__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;CA&apos;
      , FICO_Score__c &lt; 450
      , QC_Monthly_Sales__c &lt; 7500
      , Ave_Number_of_Deposits_per_Month__c &lt; 10
      , Average_Monthly_Negative_Balance__c &gt; 3
      , Business_Open_Date__c &gt; (Today() - (30*9))
      , Industry__r.Greenwich_Capital__c = TRUE 
      , Average_Balancce__c &lt; 1000
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , Soft_Pull_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; QC_Monthly_Sales__c * 1
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )

            , Industry__r.Name = &apos;Trucking&apos;

      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 35000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;GREENWICH CAPITAL APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greenwich Capital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;AK&apos;
      , State_of_Operation__c = &apos;AS&apos;
      , State_of_Operation__c = &apos;AR&apos;
      , State_of_Operation__c = &apos;CT&apos;
      , State_of_Operation__c = &apos;DE&apos;
      , State_of_Operation__c = &apos;DC&apos;
      , State_of_Operation__c = &apos;GU&apos;
      , State_of_Operation__c = &apos;HI&apos;
      , State_of_Operation__c = &apos;IA&apos;
      , State_of_Operation__c = &apos;MI&apos;
      , State_of_Operation__c = &apos;MT&apos;
      , State_of_Operation__c = &apos;NE&apos;
      , State_of_Operation__c = &apos;NV&apos;
      , State_of_Operation__c = &apos;ND&apos;
      , State_of_Operation__c = &apos;MP&apos;
      , State_of_Operation__c = &apos;OH&apos;
      , State_of_Operation__c = &apos;OR&apos;
      , State_of_Operation__c = &apos;PR&apos;
      , State_of_Operation__c = &apos;RI&apos;
      , State_of_Operation__c = &apos;SD&apos;
      , State_of_Operation__c = &apos;VT&apos;
      , State_of_Operation__c = &apos;WV&apos;
      /*  
        FICO_Score__c &lt; 500
      */
      /*
      , Credit_Inquiries_Last_90_Days__c &gt; 20
      */
      , QC_Monthly_Sales__c &lt; 4167
      /*
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
      */
      , Average_Monthly_Negative_Balance__c &gt; 7
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.Headway_Capital__c = TRUE 
      , Average_Balancce__c &lt; 374
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      /*
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      */
      ,
       /*
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
      */
      /*
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 10000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
       */ 
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 1 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 1 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;HEADWAY APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headway Capital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Based__c</fullName>
        <label>Home Based?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Marbles</relationshipLabel>
        <relationshipName>Marbles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interface_Financial__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        FICO_Score__c &lt; 550
/*
      , Credit_Inquiries_Last_90_Days__c &gt; 20
*/
/*
      , QC_Monthly_Sales__c &lt; 20000
*/
/*
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
*/
/*
      , Average_Monthly_Negative_Balance__c &gt; 5
*/
/*
      , Business_Open_Date__c &gt; (Today() - (30*6))
*/
      , Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
      , Industry__r.Interface_Financial__c = TRUE 
      , Receivables_or_Unpaid_Invoices__c = FALSE
/*
      , Average_Balancce__c &lt; 0
*/
/*
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
*/
/*
      , Soft_Pull_Only__c = TRUE
*/
      , MCA_Only__c = TRUE
/*
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 10000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
*/
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , QC_Monthly_Sales__c &lt; 20000
            , Business_Open_Date__c &gt; (today() - (30*3))
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            OR(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 10000000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;INTERFACE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interface Financial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the business invoice their clients?</description>
        <label>Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Horse_Credit__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        /* uncomment if necessary
      , FICO_Score__c &lt; 500
        */
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 10000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
        /* uncomment if necessary
      , Business_Open_Date__c &gt; (Today() - (30*6))
        */
        
        Industry__r.Iron_Horse_Credit__c = TRUE

      , Receivables_or_Unpaid_Invoices__c = FALSE
       
        /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary 
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
        /* uncomment if necessary
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
        */
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &gt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            AND(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 10 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 10000000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;IRON HORSE CREDIT APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iron Horse Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KatalystFP__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;CA&apos; 
      , FICO_Score__c &lt; 550
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 20000
      , Ave_Number_of_Deposits_per_Month__c &lt; 6
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Industry__r.KatalystFP__c = TRUE 
      , Average_Balancce__c &lt; ((QC_Monthly_Sales__c / 9) / 20)
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; QC_Monthly_Sales__c
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )

      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 2 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 3 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 250000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.25 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;||PAUSED|| - KATALYSTFP APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KatalystFP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knight_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        FICO_Score__c &lt; 0
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 10000
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*3))
      , Industry__r.Knight_Capital__c = TRUE
      , Average_Balancce__c &lt; 0
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , No_Daily_Payment__c  = TRUE
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
      , RapidAdvance_Balance__c = TRUE 

        */
      , MCA_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
       /*Max Rev Take for Subordinated Positions*/ 
       IF(
           AND(
                 Sum_of_Competitor_Balances__c &gt; 0
               , Position__c &gt; 1
              )
          ,(Sum_of_Competitor_Balances__c / 10)/ QC_Monthly_Sales__c &gt; 0.18 /*Max Rev Take*/
          , FALSE
         ) 
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 150000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;KNIGHT APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Five9_Lists__c</fullName>
        <label>Last Five9 Lists</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Funded_Date__c</fullName>
        <description>The most recent date of funding from RapidAdvance or another finance source.  Used to determine if our partners will entertain offering additional financing at this time.</description>
        <label>Last Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Timestamp__c</fullName>
        <label>Last Status Change Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Calc_Liink__c</fullName>
        <formula>IF( ISNULL( Leadid__c ) ,
HYPERLINK(&quot;https://calc.rapidadvance.com/lead/salesforcelead?id=&quot;&amp; Leadid__c, &quot;LEAD LINK&quot;),HYPERLINK(&quot;https://calc.rapidadvance.com/lead/salesforcelead?id=&quot;&amp; OpID__c, &quot;LEAD LINK&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Calc Liink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://na33.salesforce.com/&quot;&amp; Opportunity_Reference__r.Lead_ID_Opp__c , &quot;Lead/Opp Link&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Opp Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Reference</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marbles</relationshipLabel>
        <relationshipName>Marbles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadid__c</fullName>
        <formula>Lead_Reference__r.LeadId18Char__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leadid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Opportunity_Reference__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LenCred__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        FICO_Score__c &lt; 650
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 10
        */
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 15000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
        /*uncomment if necessary
      , Business_Open_Date__c &gt; (Today() - (30*24))
        */
      ,  Bankruptcy__c = TRUE
      ,  Industry__r.LenCred__c = TRUE
         /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
        /* uncomment if necessary
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
        */
)
, &quot;&quot;
, &quot;LENCRED APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LenCred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendio__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        FICO_Score__c &lt; 500
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 10000
      , Ave_Number_of_Deposits_per_Month__c &lt; 0
      , Average_Monthly_Negative_Balance__c &gt; 10
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.Lendio__c = TRUE 
      , Average_Balancce__c &lt; 100
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
      , Soft_Pull_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30 * 12))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 500000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 10 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 10 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 500000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;LENDIO APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lendio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendistry_MCA__c</fullName>
        <formula>IF(
   OR(  
        FICO_Score__c &lt; 640
      , QC_Monthly_Sales__c &lt; 100000 /*Rapid Imposed Limit, Lendistry min is $25K */
      , Ave_Number_of_Deposits_per_Month__c &lt; 5
      , Average_Monthly_Negative_Balance__c &gt; 3
      , Business_Open_Date__c &gt; (Today() - (30*24))
      , Industry__r.Lendistry__c = TRUE 
      , Average_Balancce__c &lt; 5000
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)

        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 3 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 250000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;LENDISTRY MCA APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lendistry MCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendr_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Submitted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>